tests/ui/type-alias-impl-trait/underconstrained_lifetime.stderr
error[E0491]: in type `&'b &'a ()`, reference has a longer lifetime than the data it references
  --> $DIR/underconstrained_lifetime.rs:20:5
   |
LL |     x
   |     ^
   |
note: the pointer is valid for the lifetime `'b` as defined here
  --> $DIR/underconstrained_lifetime.rs:15:20
   |
LL | type Converter<'a, 'b> = impl ProofForConversion<'a, 'b>;
   |                    ^^
note: but the referenced data is only valid for the lifetime `'a` as defined here
  --> $DIR/underconstrained_lifetime.rs:15:16
   |
LL | type Converter<'a, 'b> = impl ProofForConversion<'a, 'b>;
   |                ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0491`.
